src/test/ui/consts/const-eval/const_let.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/const_let.rs:13:55
   |
LL | const Y: FakeNeedsDrop = { let mut x = FakeNeedsDrop; x = FakeNeedsDrop; x };
   |                                                       ^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const_let.rs:17:35
   |
LL | const Z: () = { let mut x = None; x = Some(FakeNeedsDrop); };
   |                                   ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0019`.
